# x264-dsp

./: .clang-format  .clangd  .envrc  .gitignore  .pre-commit-config.yaml  .shellcheckrc  CMakeLists.txt  DM6467.cmd  Doxyfile  Makefile.am  README.md  compile_flags.txt  configure.ac  configure.h.in  downsample.c  downsample.h  input.c  input.h  meson.build  meson.options  output.c  output.h  pyproject.toml  shell.nix  x264.c  xmake.lua
.github/workflows/: main.yml
assets/gel/: davincihd1080p_arm.gel  davincihd_arm.gel  davincihd_dsp.gel
cmake/: ti.cmake
common/: bitstream-a.sa  bitstream.c  bitstream.h  cabac.c  cabac.h  common.c  common.h  dct-a.sa  dct.c  dct.h  deblock-a.sa  deblock.c  frame.c  frame.h  macroblock.c  macroblock.h  mc-a.sa  mc.c  mc.h  mvpred.c  osdep.h  pixel-a.sa  pixel.c  pixel.h  predict-a.sa  predict.c  predict.h  quant-a.sa  quant.c  quant.h  rectangle.h  set.c  set.h  vlc.c  x264.h
docs/: comparison-between-mpeg4-and-h264.md  conf.py  downsample.md  index.md  test-principles.md  test-report.md
docs/scripts/: calc-psnr.py  downsample-test.m  downsample-test.py  encoding.sh
encoder/: analyse.c  analyse.h  cabac.c  cavlc.c  encoder.c  lookahead.c  macroblock.c  macroblock.h  me.c  me.h  ratecontrol.c  ratecontrol.h  set.c  set.h  slicetype.c
meson/: ti-c6000.txt
requirements/: calc-psnr.txt
scripts/: burn.js  calc-psnr-preprocess.sh  calc-psnr.py  ccstudio.sh  downsample-test.py  generate-compile_commands.json-for-gel.jq  generate-compile_commands.json-for-gel.sh  generate-compile_commands.json.jq  generate-compile_commands.json.sh  generate-yuv.h.pl  get-psnr.sh  wrapper.sh  yuv.c.in
targetConfigs/: DM6467.cmd  DM6467.sa  TMS320DM6467.ccxml  davincihd1080p_arm.gel
targetConfigs/gel/: davincihd1080p_arm.gel
test/: asm.bats  bin2c.bats  bit-depth.bats  chroma-format.bats  debug.bats  downsample-scale.bats  downsample.bats  dry-run.bats  fake-input.bats  log-level.bats  padding.bats  setup.sh
tests/: CMakeLists.txt  Makefile.am  check_downsample.c.in  check_getopt.c  meson.build
xmake/: config.h.in  yuv.h.in
